// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputRange does render 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={true}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <span
      className="rka-input-range-current txt-bold is-disabled"
    />
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;

exports[`InputRange does render with a number defaultValue 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={true}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
    value={12}
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <span
      className="rka-input-range-current txt-bold is-disabled"
    >
      12
    </span>
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;

exports[`InputRange does render with a number value 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={true}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
    value={12}
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <span
      className="rka-input-range-current txt-bold is-disabled"
    >
      12
    </span>
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;

exports[`InputRange does render with a string defaultValue 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={true}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
    value="12"
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <span
      className="rka-input-range-current txt-bold is-disabled"
    >
      12
    </span>
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;

exports[`InputRange does render with a string value 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={true}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
    value="12"
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <span
      className="rka-input-range-current txt-bold is-disabled"
    >
      12
    </span>
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;

exports[`InputRange does render with onChange 1`] = `
<div
  className="rka-input-range-container clearfix"
>
  <input
    className="rka-input-range"
    disabled={false}
    max={100}
    min={0}
    name="Test"
    onBlur={[Function]}
    onChange={[Function]}
    step={1}
    type="range"
  />
  <p>
    <span
      className="rka-input-range-min"
    >
      0
    </span>
    <input
      className="rka-input-txt rka-input-range-current txt-c"
      disabled={false}
      name="Test"
      onChange={[Function]}
      size={5}
      type="text"
    />
    <span
      className="rka-input-range-max"
    >
      100
    </span>
  </p>
</div>
`;
